--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   woocommerce_api: ^0.1.0
+  carousel_slider: ^4.2.1
+
 
 dev_dependencies:
   flutter_test:
