--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   carousel_slider: ^4.2.1
   flutter_launcher_icons: ^0.13.1
   flutter_riverpod: ^1.0.3
+  flutter_rating_bar: ^4.0.0
+  shared_preferences: ^2.0.0
+
+
 
 dev_dependencies:
   flutter_test:
