--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   woocommerce_api: ^0.1.0
   carousel_slider: ^4.2.1
-  flutter_launcher_icons: ^0.13.1
   flutter_riverpod: ^1.0.3
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
@@ -51,14 +51,16 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-
-flutter_app_name:
-  name: "Commitment"
-
+  flutter_launcher_icons: ^0.11.0
+  flutter_app_name : ^0.1.0
+    
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/icons/app_icon.png"
+  image_path: "assets/icon/app_icon.png"
+
+flutter_app_name:
+  name: "Commitment"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
