--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,8 @@ dependencies:
   carousel_slider: ^4.2.1
   flutter_riverpod: ^1.0.3
   flutter_rating_bar: ^4.0.0
-  shared_preferences: ^2.0.0
-
+  shared_preferences: ^2.0.0 
+  flutter_countdown_timer: ^4.1.0
 
 
 dev_dependencies:
