--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   flutter_rating_bar: ^4.0.0
   shared_preferences: ^2.0.0 
   flutter_countdown_timer: ^4.1.0
+  dropdown_textfield: ^1.0.8
+  dio: ^5.4.1
+  intl: ^0.19.0
+  image_picker: ^1.0.7
 
 
 dev_dependencies:
